--- a/package.json
+++ b/package.json
@@ -40,11 +40,17 @@
     ],
     "englishdoc": "",
     "devDependencies": {
+        "cz-conventional-changelog": "^3.3.0",
         "prettier": "^2.2.1",
         "tslint": "^6.1.3",
         "tslint-microsoft-contrib": "^6.2.0"
     },
     "dependencies": {
         "typescript": "^4.1.3"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
